fix: permit query `Asset` json properties (#3559)
fix: permit query asset json properties